--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": ".eslintrc.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server/index.js",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "start": "nodemon server/server.js",
     "build": "webpack -w"
   },
   "repository": {
@@ -24,10 +25,23 @@
     "@babel/preset-react": "^7.12.5",
     "babel-loader": "^8.2.1",
     "express": "^4.17.1",
+    "faker": "^5.1.0",
+    "mongoose": "^5.10.13",
     "nodemon": "^2.0.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "webpack": "^4.44.2",
     "webpack-cli": "^4.2.0"
+  },
+  "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.12.1",
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "jest": "^26.6.3",
+    "superagent": "^6.1.0",
+    "supertest": "^6.0.1"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
