--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "start": "nodemon server/server.js",
-    "build": "webpack -w"
+    "build": "webpack -w",
+    "seed": "node database/seeder.js"
   },
   "repository": {
     "type": "git",
@@ -23,9 +24,11 @@
     "@babel/core": "^7.12.3",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.5",
+    "axios": "^0.21.0",
     "babel-loader": "^8.2.1",
     "express": "^4.17.1",
     "faker": "^5.1.0",
+    "file-system": "^2.2.2",
     "mongoose": "^5.10.13",
     "nodemon": "^2.0.6",
     "react": "^17.0.1",
