--- a/package.json
+++ b/package.json
@@ -37,9 +37,12 @@
     "webpack-cli": "^4.2.0"
   },
   "devDependencies": {
+    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
     "@babel/plugin-transform-runtime": "^7.12.1",
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
+    "eslint": "^7.13.0",
+    "eslint-plugin-react": "^7.21.5",
     "jest": "^26.6.3",
     "superagent": "^6.1.0",
     "supertest": "^6.0.1"
