--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": ".eslintrc.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest --collect-coverage",
     "test:watch": "jest --watch",
     "start": "nodemon server/server.js",
     "build": "webpack -w",
@@ -37,11 +37,13 @@
     "webpack-cli": "^4.2.0"
   },
   "devDependencies": {
-    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
     "@babel/plugin-transform-runtime": "^7.12.1",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.3.1",
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
+    "enzyme": "^3.11.0",
     "eslint": "^7.13.0",
+    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
     "eslint-plugin-react": "^7.21.5",
     "jest": "^26.6.3",
     "superagent": "^6.1.0",
