--- a/package.json
+++ b/package.json
@@ -41,11 +41,13 @@
     "@wojtekmaj/enzyme-adapter-react-17": "^0.3.1",
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
+    "css-loader": "^5.0.1",
     "enzyme": "^3.11.0",
     "eslint": "^7.13.0",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
     "eslint-plugin-react": "^7.21.5",
     "jest": "^26.6.3",
+    "style-loader": "^2.0.0",
     "superagent": "^6.1.0",
     "supertest": "^6.0.1"
   },
