--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "jest --collect-coverage",
     "test:watch": "jest --watch",
-    "start": "nodemon server/server.js",
-    "build": "webpack -w",
+    "start": "node server/server.js",
+    "build": "webpack",
     "seed": "node database/seeder.js"
   },
   "repository": {
@@ -33,7 +33,7 @@
     "nodemon": "^2.0.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "webpack": "^4.44.2",
+    "webpack": "^5.6.0",
     "webpack-cli": "^4.2.0"
   },
   "devDependencies": {
