--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jest --collect-coverage",
     "test:watch": "jest --watch",
     "start": "node server/server.js",
-    "build": "webpack -w",
+    "build": "webpack",
     "seed": "node database/seeder.js"
   },
   "repository": {
