--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest --collect-coverage",
     "test:watch": "jest --watch",
-    "start": "node server/server.js",
+    "start": "nodemon server/server.js",
     "build": "webpack",
     "seed": "node database/seeder.js"
   },
@@ -21,35 +21,37 @@
   },
   "homepage": "https://github.com/Hack-Reactor-Team-Lannister/Main-Product-Display#readme",
   "dependencies": {
-    "@babel/core": "^7.12.3",
-    "@babel/preset-env": "^7.12.1",
-    "@babel/preset-react": "^7.12.5",
     "axios": "^0.21.0",
-    "babel-loader": "^8.2.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "faker": "^5.1.0",
-    "file-system": "^2.2.2",
     "mongoose": "^5.10.13",
     "nodemon": "^2.0.6",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "webpack": "^5.6.0",
-    "webpack-cli": "^4.2.0"
+    "react-dom": "^17.0.1"
   },
   "devDependencies": {
+    "babel-loader": "^8.2.1",
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-react": "^7.12.5",
     "@babel/plugin-transform-runtime": "^7.12.1",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.3.1",
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "css-loader": "^5.0.1",
     "enzyme": "^3.11.0",
+    "file-system": "^2.2.2",
+    "path": "^0.12.7",
+    "faker": "^5.1.0",
     "eslint": "^7.13.0",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
     "eslint-plugin-react": "^7.21.5",
     "jest": "^26.6.3",
     "style-loader": "^2.0.0",
     "superagent": "^6.1.0",
-    "supertest": "^6.0.1"
+    "supertest": "^6.0.1",
+    "webpack": "^5.6.0",
+    "webpack-cli": "^4.2.0"
   },
   "jest": {
     "testEnvironment": "node"
