able to do crud operations through endpoints on ongo, cassandra postgress, through APIS, proceed to seed cassandra database

--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
   "homepage": "https://github.com/Hack-Reactor-Team-Lannister/Main-Product-Display#readme",
   "dependencies": {
     "axios": "^0.21.0",
+    "cassandra-driver": "^4.6.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.10.13",
     "nodemon": "^2.0.6",
+    "pg": "^8.5.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
