--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest --collect-coverage",
     "test:watch": "jest --watch",
-    "start": "nodemon server/server.js",
+    "start": "nodemon server/index.js",
     "build": "webpack",
     "seed": "node database/seeder.js"
   },
