--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,10 @@
 {
-  "presets": ["@babel/preset-react", "@babel/preset-env"],
+  "presets": [
+    "@babel/preset-react",
+    "@babel/preset-env"
+  ],
   "plugins": [
-    "@babel/plugin-transform-runtime"
-    ]
+    "@babel/plugin-transform-runtime",
+    "babel-plugin-styled-components"
+  ]
 }
