--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jest --collect-coverage",
     "test:watch": "jest --watch",
     "start": "nodemon server/index.js",
-    "build": "webpack",
+    "build": "webpack --watch",
     "seed": "node database/seeder.js"
   },
   "repository": {
@@ -30,33 +30,37 @@
     "nodemon": "^2.0.6",
     "pg": "^8.5.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
-    "babel-loader": "^8.2.1",
     "@babel/core": "^7.12.3",
+    "@babel/plugin-transform-runtime": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.5",
-    "@babel/plugin-transform-runtime": "^7.12.1",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.3.1",
     "babel-cli": "^6.26.0",
+    "babel-loader": "^8.2.1",
+    "babel-plugin-styled-components": "^1.12.0",
     "babel-preset-env": "^1.7.0",
     "css-loader": "^5.0.1",
     "enzyme": "^3.11.0",
-    "file-system": "^2.2.2",
-    "path": "^0.12.7",
-    "faker": "^5.1.0",
-    "yargs": "^16.2.0",
-    "fs": "0.0.1-security",
     "eslint": "^7.13.0",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
     "eslint-plugin-react": "^7.21.5",
+    "faker": "^5.1.0",
+    "file-system": "^2.2.2",
+    "fs": "0.0.1-security",
     "jest": "^26.6.3",
+    "path": "^0.12.7",
+    "postcss-loader": "^4.1.0",
+    "postcss-preset-env": "^6.7.0",
     "style-loader": "^2.0.0",
     "superagent": "^6.1.0",
     "supertest": "^6.0.1",
     "webpack": "^5.6.0",
-    "webpack-cli": "^4.2.0"
+    "webpack-cli": "^4.2.0",
+    "yargs": "^16.2.0"
   },
   "jest": {
     "testEnvironment": "node"
