--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test:watch": "jest --watch",
     "start": "nodemon server/index.js",
     "build": "webpack --watch",
-    "seed": "node database/seeder.js"
+    "seed": "node database/seeder.js",
+    "stressout": "artillery run artillery-server.yaml"
   },
   "repository": {
     "type": "git",
@@ -27,6 +28,7 @@
     "express": "^4.17.1",
     "lodash": "^4.17.20",
     "mongoose": "^5.10.13",
+    "newrelic": "^7.0.2",
     "nodemon": "^2.0.6",
     "pg": "^8.5.1",
     "react": "^17.0.1",
@@ -39,6 +41,7 @@
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.5",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.3.1",
+    "artillery": "^1.6.1",
     "babel-cli": "^6.26.0",
     "babel-loader": "^8.2.1",
     "babel-plugin-styled-components": "^1.12.0",
